--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,4 +8,5 @@
 @import "sass/2.Generic/icons";
 @import "sass/2.Generic/resets";
 @import "sass/2.Generic/sidewide";
+@import "sass/3.Components/example";
 @import "sass/4.Extras/extras";
