--- a/src/pug/parts/header.pug
+++ b/src/pug/parts/header.pug
@@ -1,7 +1,7 @@
 head
   meta(charset='utf-8')
   meta(name='description' content='')
-  title this is the website title 
+  title Aaron McGuire Empty Project Build
   link(rel='stylesheet' href='styles/main.css')
     
     
