--- a/src/styles/Sass/1.Tools/_fonts.scss
+++ b/src/styles/Sass/1.Tools/_fonts.scss
@@ -1,41 +1,41 @@
 // import your fonts here
 @font-face {
-src:url(fonts/OpenSans-Light.ttf);
+src:url(../../fonts/OpenSans-Light.ttf);
 font-family:'OpenSans-Light';
 }
 @font-face {
-src:url(fonts/OpenSans-Lightitalic.ttf);
+src:url(../../fonts/OpenSans-Lightitalic.ttf);
 font-family:'OpenSans-Lightitalic';
 }
 @font-face {
-src:url(fonts/OpenSans-Italic.ttf);
+src:url(../../fonts/OpenSans-Italic.ttf);
 font-family:'OpenSans-Italic';
 }
 @font-face {
-src:url(fonts/OpenSans-Regular.ttf);
+src:url(../../fonts/OpenSans-Regular.ttf);
 font-family:'OpenSans-Regular';
 }
 @font-face {
-src:url(fonts/OpenSans-Semibold.ttf);
+src:url(../../fonts/OpenSans-Semibold.ttf);
 font-family:'OpenSans-Semibold';
 }
 @font-face {
-src:url(fonts/OpenSans-SemiboldItalic.ttf);
+src:url(../../fonts/OpenSans-SemiboldItalic.ttf);
 font-family:'OpenSans-SemiboldItalic';
 }
 @font-face {
-src:url(fonts/OpenSans-Bold.ttf);
+src:url(../../fonts/OpenSans-Bold.ttf);
 font-family:'OpenSans-Bold';
 }
 @font-face {
-src:url(fonts/OpenSans-BoldItalic.ttf);
+src:url(../../fonts/OpenSans-BoldItalic.ttf);
 font-family:'OpenSans-BoldItalic';
 }
 @font-face {
-src:url(fonts/OpenSans-ExtraBold.ttf);
+src:url(../../fonts/OpenSans-ExtraBold.ttf);
 font-family:'OpenSans-Light';
 }
 @font-face {
-src:url(fonts/OpenSans-ExtraBoldItalic.ttf);
+src:url(../../fonts/OpenSans-ExtraBoldItalic.ttf);
 font-family:'OpenSans-Light';
 }
